Updating site to meet lab 1 criteria

--- a/index.html
+++ b/index.html
@@ -6,6 +6,18 @@
 
 <body>
     <h1>
-        Hello Welcome to my Website
+        Salar's Website
     </h1>
+    <h2>
+        About Me
+    </h2>
+    <p>My name is Salar Kashif. I am an IT major at KSU and the purpose of this is to complete lab 1.</p>
+    <h2>
+        <strong>
+            Course Information
+        </strong>
+    </h2>
+    <p>Course: IT 4403 Advanced Web App and Mobile Development</p>
+    <p>Professor: IT 4403 Advanced Web App and Mobile Development</p>
+    <p>Department: <span href="https://www.kennesaw.edu/ccse/academics/information-technology/">Information Technology</span></p>
 </body>
